--- a/eventcontrol.css
+++ b/eventcontrol.css
@@ -21,10 +21,12 @@
 .eventcontrol .ec-dot {
     position: absolute;
     padding: 0;
-    border-width: 4px;
-    border-style: solid;
-    border-radius: 4px;
+    width: 1px;
+    height: 1px;
+    border: 4px solid;
+    border-radius: 1px;
     cursor:pointer;
+    background: #fff;
     z-index: 1;
 }
 
